plugins {
    id 'com.android.application'
}

android {
    namespace 'it.smg.hu'

    compileSdk rootProject.ext.compileSdk

    defaultConfig {
        applicationId "it.smg.hu"
        minSdkVersion rootProject.ext.minSdk
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion rootProject.ext.targetSdk
        versionCode rootProject.ext.versionCode
        versionName rootProject.ext.versionName
        multiDexEnabled true

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
//        signingConfig signingConfigs.debug

        android.applicationVariants.all { variant ->
            variant.outputs.all {
                outputFileName = rootProject.apkName + ".apk"
            }
        }

        buildFeatures {
            aidl = true;
        }
    }

    splits {
        abi {
            enable true
            reset()
            //noinspection ChromeOsAbiSupport
            include rootProject.ext.SupportedABIs.join(", ")
            universalApk false
        }
    }

    signingConfigs {
        release {
            def storePath = System.getenv("ODA_RELEASE_STORE_FILE")
            def storePasswordValue = System.getenv("ODA_RELEASE_STORE_PASSWORD")
            def keyAliasValue = System.getenv("ODA_RELEASE_KEY_ALIAS")
            def keyPasswordValue = System.getenv("ODA_RELEASE_KEY_PASSWORD")
            if (storePath != null && !storePath.trim().isEmpty()
                    && storePasswordValue != null && !storePasswordValue.trim().isEmpty()
                    && keyAliasValue != null && !keyAliasValue.trim().isEmpty()
                    && keyPasswordValue != null && !keyPasswordValue.trim().isEmpty()) {
                storeFile file(storePath)
                storePassword storePasswordValue
                keyAlias keyAliasValue
                keyPassword keyPasswordValue
            }
        }
    }

    buildTypes {
        debug {
            packagingOptions {
//                doNotStrip "**.so"
//                pickFirst '**/libc++_shared.so'
//                pickFirst '**/libcommon.so'
            }
        }

        release {
            signingConfig signingConfigs.release.storeFile != null ? signingConfigs.release : signingConfigs.debug
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'

//            packagingOptions {
//                pickFirst '**/libc++_shared.so'
//                pickFirst '**/libcommon.so'
//            }
        }
    }

    ndkVersion rootProject.ext.ndkVersion

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    compileOnly files('../ext-libs/framework/ada-ext-api.jar')

    implementation libs.appcompat
    implementation libs.material
    implementation libs.constraintlayout
    implementation project(path: ':common')
    implementation project(path: ':aasdk')
    implementation project(path: ':omxvideocodec')
    implementation libs.multidex
    implementation libs.localbroadcastmanager

//    implementation libs.coordinatorlayout

    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}
